objects/CI_Job_Baseline__c.object
<CustomObject>
    <description>Custom Obj created to test the CI Job functionality.</description>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <label>Field 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CI Job Baseline</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CI Job Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CI Job Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>